--- a/amebo/templates/events.html
+++ b/amebo/templates/events.html
@@ -128,7 +128,7 @@
     action: '',
     deduper: '',
     payload: '',
-    passphrase: '',
+    secret: '',
     fetchActions(){
         fetch('/v1/actions', {
             method: 'GET'
@@ -141,7 +141,7 @@
         })
     },
     resetForm(){
-        this.passphrase = '';
+        this.secret = '';
         this.action = '';
         this.deduper = '';
         this.payload = '';
@@ -150,7 +150,7 @@
         superpost('/v1/events').send({
             action: this.action,
             deduper: this.deduper,
-            passphrase: this.passphrase,
+            secret: this.secret,
             payload: JSON.parse(this.ide.getValue())
         }).then(res => {
             supertoast('info', 'Event published successfully')
@@ -179,9 +179,9 @@
             <input type="text" class="w-30em input" placeholder="Unique deduplication key for event..." x-model="deduper">
         </div>
         <div class="brick vertical-aligns-middle">
-            <label class="font-800 mr-2">Passphrase: </label>
+            <label class="font-800 mr-2">secret: </label>
             <div class="control display-inline-block has-icons-right" x-data="{visible: false}">
-                <input :type="visible ? 'text' : 'password'" class="w-30em input" placeholder="Enter passphrase to publish event..." x-model="passphrase">
+                <input :type="visible ? 'text' : 'password'" class="w-30em input" placeholder="Enter secret to publish event..." x-model="secret">
                 <span class="icon is-right" @click="visible = !visible">
                     <img :src="`/public/icons/${visible ? 'eye' : 'neye'}.svg`" class="pointer-events-all"></img>
                 </span>
