--- a/amebo/public/all.css
+++ b/amebo/public/all.css
@@ -5,24 +5,30 @@ ion-icon {
 .brick {
     margin-bottom: 1em;
 }
+
 .brick label {
     display: inline-block;
     width: 10em !important;
     vertical-align: top;
 }
+
 .bricks {
     display: flex;
 }
+
 .bricks .input.is-small {
     width: min-content;
 }
+
 button.is-loading {
     pointer-events: none;
     position: relative;
 }
+
 button.is-loading * {
     visibility: hidden;
 }
+
 button.is-loading::after {
     animation: spinAround 0.5s infinite linear;
     content: ".";
@@ -31,11 +37,13 @@ button.is-loading::after {
     position: absolute;
     top: 0;
 }
+
 .easel {
     position: relative;
     overflow-y: scroll;
     scrollbar-width: 0;
 }
+
 .easel::-webkit-scrollbar {
     display: none;
 }
@@ -43,9 +51,11 @@ button.is-loading::after {
 .svgi {
     filter: invert(0.6) sepia(1) saturate(1) hue-rotate(175deg);
 }
+
 .svgxs {
     width: 0.9em;
 }
+
 .is-active .svgi {
     filter: none;
 }
@@ -55,6 +65,7 @@ tbody {
     height: 60vh;
     overflow-y: scroll;
 }
+
 thead,
 tfoot,
 tbody tr {
@@ -62,9 +73,11 @@ tbody tr {
     width: 100%;
     table-layout: fixed;
 }
+
 .table {
     display: block;
 }
+
 .tabs ul li.is-active {
     border-bottom: 3px solid salmon !important;
     background-color: #e5eff9;
@@ -76,6 +89,7 @@ tbody tr {
 .align-items-center {
     align-items: center;
 }
+
 .align-self-center {
     align-self: center;
 }
@@ -87,6 +101,7 @@ tbody tr {
 .flex-direction-column {
     flex-direction: column;
 }
+
 .flex-direction-row {
     flex-direction: row;
 }
@@ -94,15 +109,19 @@ tbody tr {
 .font-800 {
     font-weight: 800;
 }
+
 .font-900 {
     font-weight: 900 !important;
 }
+
 .font-size-xs {
     font-size: 0.7em;
 }
+
 .font-size-sm {
     font-size: 1em;
 }
+
 .font-size-md {
     font-size: 1.6em;
 }
@@ -110,9 +129,11 @@ tbody tr {
 .justify-content-center {
     justify-content: center;
 }
+
 .justify-content-space-around {
     justify-content: space-around;
 }
+
 .justify-content-space-between {
     justify-content: space-between;
 }
@@ -120,6 +141,7 @@ tbody tr {
 .h-3em {
     height: 3.1em;
 }
+
 .h-100 {
     height: 100% !important;
 }
@@ -131,13 +153,16 @@ tbody tr {
 .w-20em {
     width: 20em;
 }
+
 .w-30em {
     width: 30em;
 }
+
 .mw-40em {
     min-width: 40em;
 }
 
-.width-5em {
+.width-5em,
+.w-5em {
     width: 5em;
 }
