--- a/amebo/public/all.css
+++ b/amebo/public/all.css
@@ -1,3 +1,7 @@
+@import url("https://use.typekit.net/zwj1jrn.css");
+
+html * { font-family: 'Soleil' !important; }
+
 ion-icon {
     pointer-events: none;
 }
