chore: modernise ui

--- a/amebo/templates/login.html
+++ b/amebo/templates/login.html
@@ -97,7 +97,7 @@
                               <input type="password" x-model="password" class="input" placeholder="Enter admin password">
                           </div>
                       </div>
-                      <button class="button is-info is-large is-fullwidth mt-6" @click="doLogin">Login as Administrator</button>
+                      <button class="button quinary is-large is-fullwidth mt-6" @click="doLogin">Login as Administrator</button>
                   </div>
               </template>
           </div>
