--- a/amebo/public/all.css
+++ b/amebo/public/all.css
@@ -1,38 +1,24 @@
 @import url("https://use.typekit.net/zwj1jrn.css");
 
+:root {
+    --color-primary: #ff9800;
+    --color-secondary: #4caf50;
+    --color-tertiary: #f44336;
+    --color-quaternary: #9c27b0;
+    --color-quinary: #111;
+}
+
 html * { font-family: 'Soleil' !important; }
 
-ion-icon {
-    pointer-events: none;
-}
+.align-items-center { align-items: center; }
+.align-self-center { align-self: center; }
 
-.brick {
-    margin-bottom: 1em;
-}
-
-.brick label {
-    display: inline-block;
-    width: 10em !important;
-    vertical-align: top;
-}
-
-.bricks {
-    display: flex;
-}
-
-.bricks .input.is-small {
-    width: min-content;
-}
-
-button.is-loading {
-    pointer-events: none;
-    position: relative;
-}
-
-button.is-loading * {
-    visibility: hidden;
-}
-
+.brick { margin-bottom: 1em; }
+.brick label { display: inline-block; width: 10em !important; vertical-align: top; }
+.bricks { display: flex; }
+.bricks .input.is-small { width: min-content; }
+button.is-loading { pointer-events: none; position: relative; }
+button.is-loading * { visibility: hidden; }
 button.is-loading::after {
     animation: spinAround 0.5s infinite linear;
     content: ".";
@@ -41,132 +27,45 @@ button.is-loading::after {
     position: absolute;
     top: 0;
 }
+button.button.primary { background-color: var(--color-primary); color: #fff; }
+button.button.secondary { background-color: var(--color-secondary); color: #fff; }
+button.button.tertiary { background-color: var(--color-tertiary); color: #fff; }
+button.button.quaternary { background-color: var(--color-quaternary); color: #fff; }
+button.button.quinary { background-color: var(--color-quinary); color: #fff; }
+.bg-light { background-color: #f9f9f9; }
 
-.easel {
-    position: relative;
-    overflow-y: scroll;
-    scrollbar-width: 0;
-}
+.easel { position: relative; overflow-y: scroll; scrollbar-width: 0; }
+.easel::-webkit-scrollbar { display: none; }
 
-.easel::-webkit-scrollbar {
-    display: none;
-}
+.flex-direction-column { flex-direction: column; }
+.flex-direction-row { flex-direction: row; }
+.font-800 { font-weight: 800; }
+.font-900 { font-weight: 900 !important; }
+.font-size-xs { font-size: 0.7em; }
+.font-size-sm { font-size: 1em; }
+.font-size-md { font-size: 1.6em; }
 
-.svgi {
-    filter: invert(0.6) sepia(1) saturate(1) hue-rotate(175deg);
-}
+.justify-content-center { justify-content: center; }
+.justify-content-space-around { justify-content: space-around; }
+.justify-content-space-between { justify-content: space-between; }
 
-.svgxs {
-    width: 0.9em;
-}
+.h-3em { height: 3.1em; }
+.h-100 { height: 100% !important; }
 
-.is-active .svgi {
-    filter: none;
-}
+ion-icon { pointer-events: none; }
+.is-active .svgi { filter: none; }
+.input { border-color: #333; border-radius: 0px; outline: none !important; box-shadow: none !important; }
 
-tbody {
-    display: block;
-    height: 60vh;
-    overflow-y: scroll;
-}
+.svgi { filter: invert(0.6) sepia(1) saturate(1) hue-rotate(175deg); }
+.svgxs { width: 0.9em; }
 
-thead,
-tfoot,
-tbody tr {
-    display: table;
-    width: 100%;
-    table-layout: fixed;
-}
+tbody { display: block; height: 60vh; overflow-y: scroll; }
+thead, tfoot, tbody tr { display: table; width: 100%; table-layout: fixed; }
+.table { display: block; }
+.tabs ul li.is-active { border-bottom: 3px solid salmon !important; background-color: #e5eff9; font-weight: 900; }
+.text-align-center { text-align: center; }
 
-.table {
-    display: block;
-}
-
-.tabs ul li.is-active {
-    border-bottom: 3px solid salmon !important;
-    background-color: #e5eff9;
-    font-weight: 900;
-}
-
-/* custom css */
-
-.align-items-center {
-    align-items: center;
-}
-
-.align-self-center {
-    align-self: center;
-}
-
-.bg-light {
-    background-color: #f9f9f9;
-}
-
-.flex-direction-column {
-    flex-direction: column;
-}
-
-.flex-direction-row {
-    flex-direction: row;
-}
-
-.font-800 {
-    font-weight: 800;
-}
-
-.font-900 {
-    font-weight: 900 !important;
-}
-
-.font-size-xs {
-    font-size: 0.7em;
-}
-
-.font-size-sm {
-    font-size: 1em;
-}
-
-.font-size-md {
-    font-size: 1.6em;
-}
-
-.justify-content-center {
-    justify-content: center;
-}
-
-.justify-content-space-around {
-    justify-content: space-around;
-}
-
-.justify-content-space-between {
-    justify-content: space-between;
-}
-
-.h-3em {
-    height: 3.1em;
-}
-
-.h-100 {
-    height: 100% !important;
-}
-
-.text-align-center {
-    text-align: center;
-}
-
-.w-20em {
-    width: 20em;
-}
-
-.w-30em {
-    width: 30em;
-}
-
-.mw-40em {
-    min-width: 40em;
-}
-
-.width-5em,
-.w-5em {
-    width: 5em;
-}
+.w-20em { width: 20em; }
+.w-30em { width: 30em; }
+.mw-40em { min-width: 40em; }
+.width-5em, .w-5em { width: 5em; }
